--- a/client/src/components/add-business-modal.html
+++ b/client/src/components/add-business-modal.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>title</title>
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
-    <script src="../js/jquery-3.6.0.js"></script>
-    <script src="../js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="src/css/bootstrap.css" type="text/css" />
+    <script src="src/js/jquery-3.6.0.js"></script>
+    <script src="src/js/bootstrap.bundle.js"></script>
   </head>
   <body>
     <div
@@ -48,7 +48,7 @@
                   
                   <div class="d-flex col-lg-7  navbar-nav  w-100 justify-content-lg-around" aria-label="nav bar list" role="navigation">
                     <div class="nav-item col-lg-4 col-12 ">
-                      <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
+                      <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="review.html">Review </a>
                     </div>
   
                   <!-- dropdown menu for account actions--> 
@@ -82,7 +82,7 @@
                     </div>
                   </div>
                     <div class="nav-item col-lg-4 col-12 mt-1 mt-lg-0">
-                      <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
+                      <a class="btn w-100 btn-outline-dark rounded-0"  href="help.html">Help </a>
                     </div>
                   
                   
@@ -256,6 +256,6 @@
       </div>
     </div>
   </div>
-    <script src="../js/jscript.js"></script>
-  </body>
+  <script src="src/js/jscript.js"></script>
+</body>
 </html>
