--- a/client/src/components/login-modal.html
+++ b/client/src/components/login-modal.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>title</title>
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
-    <script src="../js/jquery-3.6.0.js"></script>
-    <script src="../js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="src/css/bootstrap.css" type="text/css" />
+    <script src="src/js/jquery-3.6.0.js"></script>
+    <script src="src/js/bootstrap.bundle.js"></script>
   </head>
   <body>
     <div class="container-fluid" aria-label="Restaurant review system application" role="application">
@@ -44,7 +44,7 @@
                     
                     <div class="d-flex col-lg-7  navbar-nav  w-100 justify-content-lg-around" aria-label="nav bar list" role="navigation">
                       <div class="nav-item col-lg-4 col-12 ">
-                        <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
+                        <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="review.html">Review </a>
                       </div>
     
                     <!-- dropdown menu for account actions--> 
@@ -78,7 +78,7 @@
                       </div>
                     </div>
                       <div class="nav-item col-lg-4 col-12 mt-1 mt-lg-0">
-                        <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
+                        <a class="btn w-100 btn-outline-dark rounded-0"  href="help.html">Help </a>
                       </div>
                     
                     
@@ -169,7 +169,7 @@
 
     
   </div>
-  <script src="../js/jscript.js"></script>
+  <script src="src/js/jscript.js"></script>
 
 </body>
 
