--- a/client/src/components/main.html
+++ b/client/src/components/main.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>title</title>
-    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
-    <script src="../js/jquery-3.6.0.js"></script>
-    <script src="../js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="src/css/bootstrap.css" type="text/css" />
+    <script src="src/js/jquery-3.6.0.js"></script>
+    <script src="src/js/bootstrap.bundle.js"></script>
   </head>
   <body>
     <div
@@ -114,6 +114,6 @@
         </div>
       </main>
     </div>
-    <script src="../js/jscript.js"></script>
+    <script src="src/js/jscript.js"></script>
   </body>
 </html>
