--- a/client/src/components/sign-up-modal.html
+++ b/client/src/components/sign-up-modal.html
@@ -44,7 +44,7 @@
                     
                     <div class="d-flex col-lg-7  navbar-nav  w-100 justify-content-lg-around" aria-label="nav bar list" role="navigation">
                       <div class="nav-item col-lg-4 col-12 ">
-                        <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="../review.html">Review </a>
+                        <a class="btn active text-light w-100 btn-outline-dark rounded-0" aria-current="true" href="review.html">Review </a>
                       </div>
     
                     <!-- dropdown menu for account actions--> 
@@ -78,7 +78,7 @@
                       </div>
                     </div>
                       <div class="nav-item col-lg-4 col-12 mt-1 mt-lg-0">
-                        <a class="btn w-100 btn-outline-dark rounded-0"  href="../help.html">Help </a>
+                        <a class="btn w-100 btn-outline-dark rounded-0"  href="help.html">Help </a>
                       </div>
                     
                     
