style: index min 320px resp & modal inputs rounded

--- a/client/src/components/add-business-modal.html
+++ b/client/src/components/add-business-modal.html
@@ -224,7 +224,7 @@
             >
             <input
               id="create-add-business"
-              class="w-100 m-1"
+              class="w-100 m-1 rounded-1"
               name="restaurant-input"   
               type="text"
               placeholder="restaurant name"
@@ -233,7 +233,7 @@
               maxlength="300"
             />
 
-            <button id="submit-create-add-business" class="btn btn-dark rounded-0  w-100 m-1 btn-success" type="submit">Submit</button>
+            <button id="submit-create-add-business" class="btn btn-dark rounded-1  w-100 m-1 btn-success" type="submit">Submit</button>
           </form>
 
           <div class="alert alert-warning d-none" aria-label="warning alert" role="alert" aria-hidden="true">
