--- a/client/src/components/sign-up-modal.html
+++ b/client/src/components/sign-up-modal.html
@@ -145,15 +145,15 @@
       </div>
 <div class="modal-body col-12 d-flex flex-column ">
 
-       <form class="w-100 d-flex flex-column align-items-center">
+       <form action="" method="post" class="w-100 d-flex flex-column align-items-center">
           <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
           <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username-input" type="text"   placeholder="Username"  required minlength="1" maxlength="300" >
           
           <label for="password-1-sign-up" class="d-none m-1">Enter password into text box</label>
-          <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="text"    placeholder="Enter password"  required minlength="1" maxlength="300" >
+          <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="password"    placeholder="Enter password"  required minlength="1" maxlength="300" >
       
           <label for="password-2-sign-up" class="d-none m-1">Confirm by re-entering password into text box</label>
-          <input id="password-2-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="text" placeholder="Confirm password" required minlength="1" maxlength="300" >
+          <input id="password-2-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="password" placeholder="Confirm password" required minlength="1" maxlength="300" >
 
           <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
 
