feat: sign-up: disabled password reenter field

--- a/client/src/components/header-main-modals.html
+++ b/client/src/components/header-main-modals.html
@@ -201,8 +201,8 @@
 
 
 
- <!-- Sign up template -->
- <div class="modal" id="sign-up_modal">
+<!-- Sign up template -->
+<div class="modal" id="sign-up_modal">
   <div class="modal-dialog">
     <div class="modal-content">
 
@@ -215,15 +215,15 @@
       </div>
 <div class="modal-body col-12 d-flex flex-column ">
 
-       <form action="" method="post" class="w-100 d-flex flex-column align-items-center">
+       <form action="http://localhost:1234/api/user/" method="POST" class="w-100 d-flex flex-column align-items-center">
           <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
-          <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username-input" type="text"   placeholder="Username"  required minlength="1" maxlength="300" >
+          <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username" type="text"   placeholder="Username"  required minlength="1" maxlength="300" >
           
           <label for="password-1-sign-up" class="d-none m-1">Enter password into text box</label>
-          <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="password"    placeholder="Enter password"  required minlength="1" maxlength="300" >
+          <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password" type="password"    placeholder="Enter password"  required minlength="1" maxlength="300" >
       
           <label for="password-2-sign-up" class="d-none m-1">Confirm by re-entering password into text box</label>
-          <input id="password-2-sign-up" class="w-100 m-1 rounded-1" name="password-input" type="password" placeholder="Confirm password" required minlength="1" maxlength="300" >
+          <input  id="password-2-sign-up" class="w-100 m-1 rounded-1"  type="password" placeholder="Confirm password" required minlength="1" maxlength="300" >
 
           <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
 
