feat: login name: passwrd, usrname clear error msg

--- a/client/src/components/login-modal.html
+++ b/client/src/components/login-modal.html
@@ -156,7 +156,7 @@
 
         </form>
             <div class="alert alert-danger w-100 d-none" role="alert" aria-label="Login information incorrect">
-              Error: Login username/password not correct
+              Error: Login username/password not correct - try to login again
             </div>
         </div>
   
