--- a/client/src/components/header-main-modals.html
+++ b/client/src/components/header-main-modals.html
@@ -253,46 +253,46 @@
 
   
 </div>
-  <!-- Login template -->
-  <div class="modal" id="Login_modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-  
-        <div class="modal-header">
+ <!-- Login template -->
+ <div class="modal" id="Login_modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+      
+      <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
+        </button>
+        <h5 class="modal-title">Login</h5>
         
-        <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
-          </button>
-          <h5 class="modal-title">Login</h5>
-          
-        </div>
-  
-        <div class="modal-body col-12 d-flex flex-column ">
-
-        <form class="w-100 d-flex flex-column align-items-center">
-            <label for="username-login" class="d-none m-1">Enter username into text box</label>
-            <input id="username-login"  class="w-100 m-1 rounded-1" name="username-input" type="text" placeholder="Username"  required minlength="1" maxlength="300" />
-            
-            <label for="password-login" class="d-none m-1">Enter password into text box</label>
-            <input id="password-login" class="w-100 m-1 rounded-1" name="password-input"  type="text"  placeholder="Password"  required minlength="1" maxlength="300" />
-        
-            <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
-
-
-        </form>
-            <div class="alert alert-danger w-100 d-none" role="alert" aria-label="Login information incorrect">
-              Error: Login username/password not correct
-            </div>
-        </div>
-  
-        <div class="modal-footer">
-             Don't have an account? <a href="signup-modal.html">Sign up here!</a>
-        </div>
-  
       </div>
-    </div>
 
-    
+      <div class="modal-body col-12 d-flex flex-column ">
+
+      <form class="w-100 d-flex flex-column align-items-center">
+          <label for="username-login" class="d-none m-1">Enter username into text box</label>
+          <input id="username-login"  class="w-100 m-1 rounded-1" name="username" type="text" placeholder="Username"  required minlength="1" maxlength="300" />
+          
+          <label for="password-login" class="d-none m-1">Enter password into text box</label>
+          <input id="password-login" class="w-100 m-1 rounded-1" name="password"  type="text"  placeholder="Password"  required minlength="1" maxlength="300" />
+      
+          <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
+
+
+      </form>
+          <div class="alert alert-danger w-100 d-none" role="alert" aria-label="Login information incorrect">
+            Error: Login username/password not correct - try to login again
+          </div>
+      </div>
+
+      <div class="modal-footer">
+           Don't have an account? <a href="signup-modal.html">Sign up here!</a>
+      </div>
+
+    </div>
   </div>
+
+  
+</div>
    <!-- Add business template -->
    <div class="modal" id="add-business_modal">
     <div class="modal-dialog">
