--- a/client/src/components/sign-up-modal.html
+++ b/client/src/components/sign-up-modal.html
@@ -123,55 +123,58 @@
  
 
 <!-- Sign up template -->
-<div class="modal" id="sign-up_modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
+ <div class="modal" id="sign-up_modal">
+         <div class="modal-dialog">
+             <div class="modal-content">
 
-      <div class="modal-header">
-      
-      <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
-        </button>
-        <h5 class="modal-title">Sign up</h5>
-        
-      </div>
-<div class="modal-body col-12 d-flex flex-column ">
+                 <div class="modal-header">
 
-    <form class="w-100 d-flex flex-column align-items-center">
-        <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
-        <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username" type="text"   placeholder="Username"  required minlength="1" maxlength="300" >
+                     <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
+                     </button>
+                     <h5 class="modal-title">Sign up</h5>
 
-        <label for="password-1-sign-up" class="d-none m-1">Enter password into a text box</label>
-        <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password" type="password"    placeholder="Enter password"  required minlength="1" maxlength="300" >
+                 </div>
+                 <div class="modal-body col-12 d-flex flex-column ">
+
+                     <form class="w-100 d-flex flex-column align-items-center">
+                         <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
+                         <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username" type="text"   placeholder="Username"  required minlength="1" maxlength="20" >
+
+                         <label for="password-1-sign-up" class="d-none m-1">Enter password into a text box</label>
+                         <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password" type="password"    placeholder="Enter password"  required minlength="1" maxlength="20" >
+
+                         <label for="password-2-sign-up" class="d-none m-1">Renter password into a text box</label>
+                         <input id="password-2-sign-up" class="w-100 m-1 rounded-1"  type="password" placeholder="Enter password"  required minlength="1" maxlength="20" >
+
+                         <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="button">Submit</button>
+
+                     </form>
+                     <div class="alert alert-warning d-none" aria-label="warning alert" role="alert">
+                         Are you sure you want to create an account?
+                         <button type="button" class="btn btn-dark">Yes</button>
+                         <button type="button" class="btn btn-dark">No</button>
 
 
-        <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
+                     </div>
+                     <div class="alert alert-success d-none" role="alert" aria-label="successful creation of account" aria-hidden="true">
+                         Success: You have created an account
+                     </div>
 
-    </form>
-      <div class="alert alert-warning d-none" aria-label="warning alert" role="alert">
-        Are you sure you want to create an account?
-        <button type="button" class="btn btn-dark">Yes</button>
-        <button type="button" class="btn btn-dark">No</button>
+                     <div class="alert alert-danger d-none" role="alert" aria-label="error alert"  aria-hidden="true">
+                         Error: the account already exists
+                     </div>
+                 </div>
+
+                 <div class="modal-footer">
+                     Have an account? <a href="login-modal.html">Login here!</a>
+                 </div>
+
+             </div>
+         </div>
 
 
      </div>
-      <div class="alert alert-success d-none" role="alert" aria-label="successful creation of account" aria-hidden="true">
-       Success: You have created an account
-     </div>
 
-     <div class="alert alert-danger d-none" role="alert" aria-label="error alert"  aria-hidden="true">
-       Error: the account already exists
-     </div>
-      </div>
-
-      <div class="modal-footer">
-           Have an account? <a href="login-modal.html">Login here!</a>
-      </div>
-
-    </div>
-  </div>
-
-  
-</div>
    <script src="../js/jscript.js"></script>
  
  </body>
