--- a/client/src/components/header-main-modals.html
+++ b/client/src/components/header-main-modals.html
@@ -255,45 +255,45 @@
     </div>
 
  <!-- Login template -->
- <div class="modal" id="Login_modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal" id="Login_modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
 
-      <div class="modal-header">
-      
-      <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
-        </button>
-        <h5 class="modal-title">Login</h5>
-        
-      </div>
+                <div class="modal-header">
 
-      <div class="modal-body col-12 d-flex flex-column ">
+                    <button type="button" class="btn btn-dark text-light " data-bs-dismiss="modal">Close
+                    </button>
+                    <h5 class="modal-title">Login</h5>
 
-          <form class="w-100 d-flex flex-column align-items-center">
-              <label for="username-sign-up" class="d-none m-1">Enter username into text box</label>
-              <input id="username-sign-up"  class="w-100 m-1 rounded-1" name="username" type="text"   placeholder="Username"  required minlength="1" maxlength="300" >
+                </div>
 
-              <label for="password-1-sign-up" class="d-none m-1">Enter password into a text box</label>
-              <input id="password-1-sign-up" class="w-100 m-1 rounded-1" name="password" type="password"    placeholder="Enter password"  required minlength="1" maxlength="300" >
+                <div class="modal-body col-12 d-flex flex-column ">
+
+                    <form action="http://localhost:1234/api/user/" class="w-100 d-flex flex-column align-items-center">
+                        <label for="username-login" class="d-none m-1">Enter username into text box</label>
+                        <input id="username-login"  class="w-100 m-1 rounded-1" name="username" type="text" placeholder="Username"  required minlength="1" maxlength="20" />
+
+                        <label for="password-login" class="d-none m-1">Enter password into text box</label>
+                        <input id="password-login" class="w-100 m-1 rounded-1" name="password"  type="password"  placeholder="Password"  required minlength="1" maxlength="20" />
+
+                        <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
 
 
-              <button id="submit-sign-up" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
+                    </form>
+                    <div class="alert alert-danger w-100 d-none" role="alert" aria-label="Login information incorrect">
+                        Error: Login username/password not correct - try to login again
+                    </div>
+                </div>
 
-          </form>
-          <div class="alert alert-danger w-100 d-none" role="alert" aria-label="Login information incorrect">
-            Error: Login username/password not correct - try to login again
-          </div>
-      </div>
+                <div class="modal-footer">
+                    Don't have an account? <a href="signup-modal.html">Sign up here!</a>
+                </div>
 
-      <div class="modal-footer">
-           Don't have an account? <a href="signup-modal.html">Sign up here!</a>
-      </div>
+            </div>
+        </div>
+
 
     </div>
-  </div>
-
-  
-</div>
    <!-- Add business template -->
    <div class="modal" id="add-business_modal">
     <div class="modal-dialog">
