feats: changed login-modal submit type= button and can login

--- a/client/src/components/login-modal.html
+++ b/client/src/components/login-modal.html
@@ -151,7 +151,7 @@
           <label for="password-login" class="d-none m-1">Enter password into text box</label>
           <input id="password-login" class="w-100 m-1 rounded-1" name="password"  type="password"  placeholder="Password"  required minlength="1" maxlength="20" />
       
-          <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
+          <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="button">Submit</button>
 
 
       </form>
