feat: Pictures for help section are changed and  amend for clearing fields after submit and added restaurant-search-with-results.html

--- a/client/src/components/restaurant-search-with-results.html
+++ b/client/src/components/restaurant-search-with-results.html
@@ -230,7 +230,7 @@
                 <div class="form-check mt-4 w-100 p-0">
                      <!--  Search bar for finding restaurants --> 
                   <form action="" method="POST" class="form-inline w-100  " aria-label="search by name section - maximum 32 characters including spaces" role="search">
-                    <label for="inner-search-textbox" class="d-none">Restaurant search name (Max 32 characters including spaces) </label>
+                    <label for="inner-search-list" class="d-none">Restaurant search name (Max 32 characters including spaces) </label>
                     <input
                     list="inner-search-list"
                       class="form-control rounded w-100 accordion-body"
